@@ -18,6 +18,7 @@ v8.0.31
 - BUG#28295478: Align exception types raised by pure Python and c-ext
 - BUG#27634910: Add warning count method to cursors
 - BUG#21463298: Fix weakly-referenced object no longer exists exception
+- BUG#21402805: Unbound local error when charset name is given as empty to set_charset_collation()
 
 v8.0.30
 =======
